# enkai-qualify

./: .env.example  .gitignore  PROTECTED_CONSTANTS.md  README.md  buildspec.yml  docker-compose.yml
.claude/: CLAUDE.md  UNIFIED_BUILD_PROPOSAL.md  project.config.json  skill-rings.json
.claude/hooks/: context-loader.py
.claude/observatory/: state.json  watchlist.json
.claude/scripts/: quality-ratchet.py
api/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
api/app/: __init__.py  config.py  main.py
api/src/: __init__.py  auth.py  main.py
api/src/models/: __init__.py  rice.py
api/src/routes/: __init__.py  billing.py  discovery.py  generate.py  packs.py  scoring.py  webhooks.py
api/src/services/ai/: __init__.py  base.py  claude.py  consensus.py  gemini.py  openai.py  perplexity.py
api/src/services/billing/: __init__.py  metering.py  stripe.py  subscriptions.py
api/src/services/discovery/: __init__.py  dataforseo.py  engine.py  patterns.py
api/src/services/pack/: __init__.py  assembler.py  issues.py  resolver.py  scaffold.py  storage.py
api/src/services/scoring/: __init__.py  confidence.py  effort.py  impact.py  reach.py  rice.py
api/tests/: __init__.py  conftest.py  test_confidence.py  test_dataforseo.py  test_effort.py  test_engine.py  test_impact.py  test_patterns.py  test_reach.py  test_rice_model.py  test_rice_scorer.py  test_routes_billing.py  test_routes_discovery.py  test_routes_scoring.py
dashboard/: .dockerignore  .gitignore  Dockerfile  buildspec-e2e.yml  docker-entrypoint.sh  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  playwright.postdeploy.config.ts  tsconfig.tsbuildinfo
modules/: ai-claude.json  analytics-posthog.json  api-fastapi.json  auth-clerk.json  base.json  cicd.json  claude.json  cognito-authjs.json  cognito-cdk.json  cognito-client.json  containerization.json  db-prisma.json  email-resend.json  index.test.ts  index.ts  infra-cdk.json  next-config.json  next16.json  next17.json  next18.json  nextjs-base.json  payments-stripe.json  posthog.json  prisma.json  resend.json  s3.json  shadcn.json  storage-s3.json  stripe.json  tsconfig.json  ui-shadcn.json
scripts/: setup_claude_config.py  sync-addons-from-template-factory.ts
worker/: .dockerignore  Dockerfile  requirements.txt
(+238 files in other folders)
